# dark-gpt

./: .gitignore  .pre-commit-config.yaml  .prettierignore  BACKLOG.md  CHANGELOG.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
data/: categories.json  prompts.json
docker/: .env.example  Caddyfile  docker-compose.monitoring.yml  docker-compose.yml
docker/alertmanager/: alertmanager.yml
docker/prometheus/: prometheus.yml
docs/: deployment.md  methodology.md  rapport-complet-qa.md  security.md
docs/adr/: 0001-network-isolation.md  0002-local-logging.md  0003-model-selection.md  0004-caddy-reverse-proxy.md  0005-tauri-gui.md  README.md
results/comparison/: report.md
scripts/: analyze_results.py  cleanup-logs.sh  cleanup-results.sh  deploy.sh  generate_charts.py  setup-https.sh  test_claude.py  test_prompts.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: docker.rs  health.rs  installer.rs  mod.rs  ollama.rs  setup.rs
src-tauri/src/services/: mod.rs
src-tauri/src/utils/: mod.rs
tests/: __init__.py  conftest.py  test_analyze.py  test_charts.py  test_prompts.py
